--- a/_config.yml
+++ b/_config.yml
@@ -28,7 +28,8 @@ twitter_username: avionmission
 github_username:  avionmission
 
 # Build settings
-theme: minima
+# [Removed minima theme as it is now a regular theme.]
+# theme: minima
 plugins:
   - jekyll-feed
 
