--- a/_config.yml
+++ b/_config.yml
@@ -19,13 +19,22 @@
 # in the templates via {{ site.myvariable }}.
 
 title: Avinash Prasad
-email: avionmission@example.com
+email: avionmission@gmail.com
 description: >- # this means to ignore newlines until "baseurl:"
   Welcome to my blog.
 baseurl: "/blog" # the subpath of your site, e.g. /blog
 url: "https://avionmission.github.io" # the base hostname & protocol for your site, e.g. http://example.com
 twitter_username: avionmission
 github_username:  avionmission
+linkedin_username: avionmission
+instagram_username: avionmission
+youtube_username: AvinashPrasad
+
+title-logo: /images/title-logo.png
+
+author: Avinash Prasad
+
+copyright: Avinash Prasad
 
 # Build settings
 # [Removed minima theme as it is now a regular theme.]
