--- a/_config.yml
+++ b/_config.yml
@@ -46,6 +46,7 @@ show_excerpts: true
 # theme: minima
 plugins:
   - jekyll-feed
+  - jekyll-seo-tag
 
 # Exclude from processing.
 # The following items will not be processed, by default.
