--- a/_config.yml
+++ b/_config.yml
@@ -48,6 +48,16 @@ plugins:
   - jekyll-feed
   - jekyll-seo-tag
 
+# Google Analytics
+google_analytics: UA-209087094-1
+
+
+# Disqus Comments
+disqus:
+  # Leave shortname blank to disable comments site-wide.
+  # Disable comments for any post by adding `comments: false` to that post's YAML Front Matter.
+  shortname: avionmission
+
 # Exclude from processing.
 # The following items will not be processed, by default.
 # Any item listed under the `exclude:` key here will be automatically added to
