Added a sitemap to the blog site in config file

--- a/_config.yml
+++ b/_config.yml
@@ -47,6 +47,7 @@ show_excerpts: true
 plugins:
   - jekyll-feed
   - jekyll-seo-tag
+  - jekyll-sitemap
 
 # Google Analytics
 google_analytics: UA-209087094-1
