--- a/_config.yml
+++ b/_config.yml
@@ -53,3 +53,8 @@ plugins:
 google_analytics: UA-209087094-1
 
 issues_repo: avionmission/blog
+
+default:
+  # _posts
+   values:
+    autoads: true
