--- a/_config.yml
+++ b/_config.yml
@@ -21,7 +21,7 @@
 title: Avinash Prasad
 email: avionmission@gmail.com
 description: >- # this means to ignore newlines until "baseurl:"
-  Welcome to my blog.
+  Avinash Prasad Blog - App Development, Ai and more.
 baseurl: "/blog" # the subpath of your site, e.g. /blog
 url: "https://avionmission.github.io" # the base hostname & protocol for your site, e.g. http://example.com
 
