--- a/_config.yml
+++ b/_config.yml
@@ -23,7 +23,7 @@ email: avionmission@gmail.com
 description: >- # this means to ignore newlines until "baseurl:"
   A Blog about App Development, Ai and more.
 baseurl: "/blog" # the subpath of your site, e.g. /blog
-url: "https://avionmission.com" # the base hostname & protocol for your site, e.g. http://example.com
+url: "https://www.avionmission.com" # the base hostname & protocol for your site, e.g. http://example.com
 
 permalink: /:title/
 
